this was solving the same issue that bringing the z-index vars in would do, but only for stacks.

--- a/.storybook/storybook.css
+++ b/.storybook/storybook.css
@@ -51,7 +51,3 @@
 .docs-story div[scale="1"] {
     transform: none !important;
 }
-
-.stacks-on-stacks {
-    z-index: 100;
-}
